Added Maven options to work around module path issue.